5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1662_1397.log
== TEST (2019-04-15 14:02:53) 
-- CODE:
af = int(input("hectares0:"))

-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:04:51) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000)
   custo = 10000 * 5.00

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:05:14) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:07:52) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 10000 * 5.00 / 10000 + 4.00

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:12) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 10000 * 5.00 / 10000 + 4.00
	
print = custo

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:17) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 10000 * 5.00 / 10000 + 4.00
	
print = custo

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:34) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 10000 * 5.00 / 10000 + 4.00
	
print = custo

-- ERROR:
File "XXXX", line 3
    if (af <= 10000)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:46) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 10000 * 5.00 / 10000 + 4.00
	
print(custo)

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:58) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	
	
print(custo)

-- ERROR:
File "XXXX", line 9
    print(custo)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:40) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 
	
print(round(custo, 2))

-- ERROR:
File "XXXX", line 7
    custo = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:46) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = 1
	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:46) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = af * 5.00
	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:19) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = af * 5.00 / 10000 % 1 + 4.00
	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:48:09) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = ((10000 * 5.00) / 10000 % 1) + 4.00
	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:10) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00 * 4
	
print(round(custo, 2))

-- ERROR:
File "XXXX", line 9
    print(round(custo, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:18) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00 * 4.00
	
print(round(custo, 2))

-- ERROR:
File "XXXX", line 9
    print(round(custo, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:22) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00 * 4.00)
	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:49) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00) + 10000 > 0	
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:27) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00) + 10000/10000 % > 0
print(round(custo, 2))

-- ERROR:
File "XXXX", line 7
    custo = (10000 * 5.00) + 10000/10000 % > 0
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:55) 
-- CODE:
af = float(input("hectares:"))

if (af <= 10000):
	custo = 10000 * 5.00
	
else:
	custo = (10000 * 5.00) /(10000 % 1 * 4.00)
print(round(custo, 2))

-- OUTPUT:
50000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
